--- a/index.html
+++ b/index.html
@@ -1,59 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-    <link rel="stylesheet" href="./dist/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet" />
 
-    <title>Frontend Mentor | Single Price Grid Component</title>
-  </head>
-  <body class="flex flex-col items-center justify-center w-full h-full min-h-screen font-sans bg-light">
-    <div class="h-full mx-6 my-6 overflow-hidden bg-white rounded-lg wrapper">
-      <div class="card-container">
-        <div class="px-5 py-6 card-heading">
-          <h1 class="text-primary font-[600] text-xl tracking-tighter">Join our community</h1>
-          <h2 class="mt-5 font-bold text-secondary">30-day, hassle-free money back guarantee</h2>
-          <p class="mt-4 text-sm leading-loose text-gray">
-            Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who
-            are serious about honing their skills.
+  <link rel="stylesheet" href="./dist/style.css" />
+
+  <title>Frontend Mentor | Single Price Grid Component</title>
+</head>
+
+<body class="bg-light flex flex-col items-center justify-center w-full h-full min-h-screen font-sans">
+  <div class="wrapper h-full mx-6 my-6 overflow-hidden bg-white rounded-lg shadow-xl">
+    <div class="card-container sm:grid grid-cols-2 max-w-[350px] sm:max-w-[640px]">
+      <div class="card-heading sm:px-10 sm:py-10 col-span-2 px-6 py-6">
+        <h1 class="text-primary font-[600] text-xl sm:text-2xl tracking-tighter">Join our community</h1>
+        <h2 class="text-secondary mt-5 text-lg font-bold">30-day, hassle-free money back guarantee</h2>
+        <p class="text-gray sm:mt-3 sm:text-base sm:leading-8 mt-4 text-sm leading-loose">
+          Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who
+          are serious about honing their skills.
+        </p>
+      </div>
+      <div class="card-price bg-primary sm:px-10 sm:py-10 sm:justify-between flex flex-col gap-5 px-6 py-6">
+        <h2 class="text-lg font-bold text-white">Monthly Subscription</h2>
+        <div class="space-y-2">
+          <p class="text-sm text-[#b4edec] flex items-center">
+            <span class="mr-2 text-3xl font-bold text-white">&dollar;29</span> per month
           </p>
+          <p class="text-light">Full access for less than &dollar;1 a day</p>
         </div>
-        <div class="flex flex-col gap-5 px-5 py-6 card-price bg-primary">
-          <h2 class="text-lg font-bold text-white">Monthly Subscription</h2>
-          <div class="">
-            <p class="text-xs text-[#b4edec]">
-              <span class="mr-2 text-3xl font-bold text-white">&dollar;29</span> per month
-            </p>
-            <p class="text-light">Full access for less than &dollar;1 a day</p>
-          </div>
-          <button class="w-full py-4 text-white rounded-md shadow-xl bg-secondary">Sign Up</button>
-        </div>
-        <div class="px-5 py-6 card-description bg-primaryLight">
-          <h2>Why Us</h2>
-          <ul>
-            <li>Tutorials by industry experts</li>
-            <li>Peer &amp; expert code review</li>
-            <li>Coding exercises</li>
-            <li>Access to our GitHub repos</li>
-            <li>Community forum</li>
-            <li>Flashcard decks</li>
-            <li>New videos every week</li>
-          </ul>
-        </div>
+        <button
+          class="bg-secondary w-full py-3 text-white rounded-md shadow-xl hover:bg-[#afcf21] transition-colors duration-300">Sign
+          Up</button>
+      </div>
+      <div class="card-description bg-primaryLight sm:px-10 sm:py-10 px-6 py-6 text-white">
+        <h2 class="text-lg font-bold">Why Us</h2>
+        <ul class="mt-4">
+          <li>Tutorials by industry experts</li>
+          <li>Peer &amp; expert code review</li>
+          <li>Coding exercises</li>
+          <li>Access to our GitHub repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
       </div>
     </div>
-    <footer>
-      <p class="">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="text-secondary">Frontend Mentor</a
-        >. Coded by <a href="#" class="text-secondary">Your Name Here</a>.
+  </div>
+  <footer>
+    <div class="sm:flex sm:gap-3 sm:mt-4 mx-6 text-center">
+      <p>Challenge by
+        <a href="https://www.frontendmentor.io/challenges/single-price-grid-component-5ce41129d0ff452fec5abbbc"
+          target="_blank" class="text-primary visited:text-secondary hover:underline hover:underline-offset-2">Frontend
+          Mentor</a>
       </p>
-    </footer>
-  </body>
+      <p>Coded by <a href="https://www.frontendmentor.io/profile/miroslaw-mroczkowski" target="_blank"
+          class="text-primary visited:text-secondary hover:underline hover:underline-offset-2">Mirosław
+          Mroczkowski</a< /p>
+    </div>
+  </footer>
+</body>
+
 </html>
